--- a/order.css
+++ b/order.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
 * {
-    margin: o;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -27,12 +27,33 @@ img {
 body {
     font-family: 'Red Hat Display', sans-serif;
     font-size: 16px;
-    background-image: url(./images/pattern-background-desktop.svg);
-    margin-bottom: 1rem;
-    background-size: cover;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: var(--Pale-blue);
+    align-items: center;
+    justify-content: center;
 }
 
-h2 {
+.background-1 {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 55%;
+    z-index: -1;
+}
+
+.background-2 {
+    display: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50%;
+    z-index: -1;
+}
+
+.background h2 {
     font-weight: 900;
     color: var(--Dark-blue)
 }
@@ -50,6 +71,13 @@ p {
     align-items: center;
     text-align: center;
     padding-bottom: 1.5rem;
+    justify-content: center;
+    gap: 1.5rem;
+
+}
+
+.container article:nth-child(3) {
+    width: 85%;
 }
 
 .music img {
@@ -65,14 +93,14 @@ p {
 .container ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     background-color: var(--Very-pale-blue);
-    width: 300px;
+    width: 100%;
     padding: 1rem 1rem 1rem 1rem;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(19, 16, 16, 0);
     height: 80px;
-    margin-bottom: 1.5rem;
 }
 
 .container ul li {
@@ -86,7 +114,7 @@ p {
     flex-direction: column;
     color: var(--Dark-blue);
     font-weight: 900;
-    margin-right: 2.7rem
+    padding-right: 8%;
 }
 
 .container ul li:nth-child(2) span {
@@ -98,6 +126,7 @@ p {
     color: var(--Bright-blue);
     font-weight: 900;
     text-decoration: underline;
+    padding-left: 8%;
 }
 
 .container ul li:last-child:hover {
@@ -109,15 +138,16 @@ p {
 .buttons {
     display: flex;
     flex-direction: column;
+    width: 85%;
 }
 
 button {
     border: none;
     border-radius: 10px;
     height: 3rem;
-    width: 300px;
+    width: 100%;
     font-weight: 700;
-    margin: 0 1rem 0rem 1rem;
+
 }
 
 .proceed {
@@ -153,6 +183,12 @@ button {
     color: hsl(228, 45%, 44%);
 }
 
+
+
+
+
+/* RESPONSIVENESS */
+
 @media(min-width: 375px) {
     .container {
         width: 400px;
@@ -162,17 +198,26 @@ button {
 }
 
 @media(max-width: 800px) {
+    .background-1 {
+        display: none;
+    }
+
+    .background-2 {
+        display: initial;
+    }
+
     .container {
         width: 300px;
         margin-top: 4rem;
     }
 
-    button {
-        width: 270px;
-
+    .container ul li:nth-child(2) {
+        padding-right: 0%;
     }
 
-    .container ul {
-        width: 270px;
+    .container ul li:last-child {
+        padding-left: 2%;
     }
+
+
 }
